--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -157,7 +157,6 @@ body {
     justify-content: center;
     background: white; }
     #single-room__wrap #single-room__sleeping img {
-      width: 70%;
       height: 70%; }
   #single-room__wrap .full-height {
     height: 100vh;
